Correct misaligned text in tip-panels on household.html

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -278,18 +278,27 @@ footer {
     max-width: 23%;
     width: 23%;
     margin: 0 20px;
-    text-align: center;
+    text-align: left;
     overflow-wrap: break-word;
     border-radius: 10px;
     font-size: 1.0rem;
+    overflow: hidden;
 }
 
-.tip-panel ul {
+.tip-panel h1, h4 {
+    text-align: center;
+}
+
+.tip-panel p, li {
+    width: 90%;
+    margin: 0 auto;
+}
+
+/* .tip-panel ul {
     display: inline-block;
     text-align: left;
-    margin-left: 20%;
     margin-bottom: 5px;
-}
+} */
 
 .tip-panel strong {
     font-family: monospace;
